# SAT_EQUATION

./: cnf.abs  cnf_polynomial_sat.abs  cnf_polynomial_unsat.abs  gen.sh  pub.abs.sol  readme.txt  report.txt  run.sh  sat_equation.py  sat_equation_paper.py  sat_equation_polynomial_satisfiability.py  sat_equation_polynomial_satisfiability_abs.py  solutions.py  test.sh  universe.abs
7-nov-2016/: frb59-26-4.msc  msc.sol  validator.py
Collaboration Networks/: AstroPh.txt  CondMat.txt  GrQc.txt  HepPh.txt  HepTh.txt  convert.sh  max_clique_validator.py  readme.txt  run.sh
EXDATA-1/: max_clique_validation_size_vs_degree.txt
bio-human-gene2/: max_clique_validator.py  readme.txt
diophantine/: 1000_variables_pow_10_Diophantine_Equation.txt  big_diophantine_equations.txt  diophantine.txt  diophantine_equation_1_dic_2016.txt  general_diophantine_equations.txt
discrete_logarithm/: CMakeLists.txt  main.cpp  readme.txt
facebook_combined/: max_clique_validator.py  readme.txt
multi_modular_diophantine_equation/: 1000_solutions.py  equation_1024bits_prime.tex  readme.md  readme.tex  redeable_example.tex  redeable_solutions.py  solutions_1024bits_prime.py
multidimensional_sum_subset_problem/: CMakeLists.txt  main.cpp  readme.txt
multiset_sum_problem/: report.txt  stackoverflow.txt
shubert_game/: shubert_game.py
soc-google-plus/: max_clique_validator.py  readme.txt
twitter_combined/: max_clique_validator.py  readme.txt
ultimate_benchmark_max_clique/: max_clique_validator.py
virii_computing/: CMakeLists.txt  readme.txt
word_count/: compile.sh  get_data.sh  (+3 more)
(+6 files in other folders)
